--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "express": "^4.18.1",
-    "path": "^0.12.7",
-    "request": "^2.88.2"
+    "express": "^4.18.1"
   }
 }
